[gd_scene load_steps=6 format=3 uid="uid://cddv16lwy000e"]

[ext_resource type="Script" path="res://scripts/shop_items/shop_item.gd" id="1_ace3y"]
[ext_resource type="Texture2D" uid="uid://beawiix1axv5i" path="res://assets/32rogues/pieces/bordernew2.png" id="2_qb7je"]
[ext_resource type="FontFile" uid="uid://bfq4w63uob47b" path="res://assets/alagard.ttf" id="3_h61ly"]
[ext_resource type="Texture2D" uid="uid://dja47v3hj8gr1" path="res://assets/32rogues/pieces/coin_1.png" id="4_0lkpt"]
[ext_resource type="Texture2D" uid="uid://ci66aa0snhn45" path="res://assets/32rogues/gems/red.png" id="5_vxtrs"]

[node name="ShopItem" type="TextureButton"]
z_index = 10
offset_right = 113.0
offset_bottom = 115.0
scale = Vector2(0.8, 0.8)
script = ExtResource("1_ace3y")

[node name="ItemNameLvl" type="Label" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -24.5
offset_top = 58.75
offset_right = 24.5
offset_bottom = 81.75
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("3_h61ly")
theme_override_font_sizes/font_size = 16
text = "Item lvl 1"
horizontal_alignment = 1
vertical_alignment = 1

[node name="ItemDescription" type="Label" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -35.5
offset_top = 78.75
offset_right = 35.5
offset_bottom = 101.75
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("3_h61ly")
text = "Description of item"
horizontal_alignment = 1
vertical_alignment = 1

[node name="ItemBackground" type="Sprite2D" parent="."]
position = Vector2(56.25, 56.25)
scale = Vector2(3, 3)
texture = ExtResource("2_qb7je")

[node name="ItemPicture" type="Sprite2D" parent="."]
position = Vector2(56, 56)
scale = Vector2(3, 3)

[node name="Price" type="Node2D" parent="."]
visible = false
z_index = 10

[node name="Coins" type="Sprite2D" parent="Price"]
position = Vector2(9.75, 166.25)
texture = ExtResource("4_0lkpt")

[node name="CoinsLabel" type="Label" parent="Price"]
offset_left = 21.0
offset_top = 160.0
offset_right = 61.0
offset_bottom = 175.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("3_h61ly")
theme_override_font_sizes/font_size = 16
text = ": 999"

[node name="Gems" type="Sprite2D" parent="Price"]
position = Vector2(69.75, 166.25)
texture = ExtResource("5_vxtrs")

[node name="GemsLabel" type="Label" parent="Price"]
offset_left = 81.0
offset_top = 160.0
offset_right = 121.0
offset_bottom = 175.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("3_h61ly")
theme_override_font_sizes/font_size = 16
text = ": 999"

[node name="LowLevel" type="Node2D" parent="."]

[node name="LowLevelLabel" type="Label" parent="LowLevel"]
visible = false
z_index = 2
offset_left = -70.0
offset_top = 45.0
offset_right = 204.0
offset_bottom = 75.0
theme_override_colors/font_color = Color(0.65098, 0, 0, 1)
theme_override_fonts/font = ExtResource("3_h61ly")
theme_override_font_sizes/font_size = 32
text = "Shop level too low!"

[node name="NotEnough" type="Node2D" parent="."]

[node name="NotEnoughLabel" type="Label" parent="NotEnough"]
visible = false
z_index = 2
offset_left = -70.0
offset_top = 45.0
offset_right = 204.0
offset_bottom = 75.0
theme_override_colors/font_color = Color(0.65098, 0, 0, 1)
theme_override_fonts/font = ExtResource("3_h61ly")
theme_override_font_sizes/font_size = 32
text = "Not enough money!"

[node name="MaxLevel" type="Node2D" parent="."]

[node name="MaxLevelLabel" type="Label" parent="MaxLevel"]
visible = false
z_index = 2
offset_left = -70.0
offset_top = 45.0
offset_right = 204.0
offset_bottom = 75.0
theme_override_colors/font_color = Color(0.65098, 0, 0, 1)
theme_override_fonts/font = ExtResource("3_h61ly")
theme_override_font_sizes/font_size = 32
text = "Max level reached!"
metadata/_edit_use_anchors_ = true

[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_mouse_exited"]
[connection signal="pressed" from="." to="." method="_on_pressed"]
